WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247428
Reassigning to class name during static field initialization
https://bugs.webkit.org/show_bug.cgi?id=247428
Summary
Reassigning to class name during static field initialization
Kanguk Lee
Reported
2022-11-03 08:52:52 PDT
// input.js class x { static #y = { x = 0 } = 0 ; } __________________________________________ Hello, Executing the input.js using JSC throws ReferenceError. However, it is expected to throw TypeError. Running the input.js with JSC results in: --- $ jsc input.js Exception: ReferenceError: Cannot access uninitialized variable. global
code@input.js
:1:1 --- while other engines behave like: --- # V8 $ node input.js input.js:1: TypeError: Assignment to constant variable. class x { static #y = { x = 0 } = 0 ; } ^ TypeError: Assignment to constant variable. at <static_initializer> (input.js:1:25) at input.js:1:1 # GraalJS $ js input.js TypeError: Assignment to constant "x" at <js> :initializer(input.js:1:24) at <js> :program(input.js:1:0-38) --- WebKit version: 615.1.10
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-10 07:53:17 PST
<
rdar://problem/102193862
>
Yijia Huang
Comment 2
2022-11-10 18:01:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6381
EWS
Comment 3
2022-11-14 11:56:34 PST
Committed
256663@main
(68f502ba813d): <
https://commits.webkit.org/256663@main
> Reviewed commits have been landed. Closing PR #6381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug